# netlog-viewer

./: .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  PUBLISHING.md  README.ja-jp.md  README.md  package-lock.json  package.json
.github/instructions/: updater.instructions.md
media/: style.css
samples/: sample-request-chain.netlog.json  sample.netlog.json
scripts/: compare-wasm-scanner-coldstart.mjs  compare-wasm-scanner.mjs  generate-wire-messages.mjs  measure-scan-share.mjs  verify-big-log.mjs  verify-parallel.mjs  verify-whole-buffer-coldstart.mjs  verify-whole-buffer.mjs
scripts/webview-bench/: index.html  server.mjs
src/Core/: ByteJsonScanner.fs  Constants.fs  Core.fsproj  Json.fs  JsonStreamScanner.fs  Library.fs  LogGrouper.fs  LogParser.fs  Model.fs  ProxyFormatter.fs  RequestSummary.fs  SourceGrouping.fs  StreamingParser.fs  TimeUtil.fs  Wire.fs
src/Extension/: Extension.fs  Extension.fsproj  NetlogEditor.fs  Node.fs  ParallelStreamLoader.fs  ParseWorker.fs  StreamLoader.fs  Vscode.fs
src/Webview/: App.fs  DetailsFind.fs  DetailsView.fs  Dom.fs  EventsView.fs  ImportView.fs  InfoViews.fs  LogViewPainter.fs  ResizableVerticalSplitView.fs  Shell.fs  SourceFilterParser.fs  TabSwitcher.fs  TablePrinter.fs  Timeline.fs  View.fs  Webview.fsproj
tests/Core.Tests/: Tests.fs  Tests.fsproj
wasm/scanner/: Cargo.toml
wasm/scanner/src/: lib.rs
